docker/terraform-aws/aws_security_groups.tf
resource "aws_security_group" "allow_ssh" {
  #vpc_id      = aws_vpc.vpc_global.id
  name        = "ssh-security-group"
  description = "Allow SSH traffic"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "allow_prometheus" {
  #vpc_id      = aws_vpc.vpc_global.id
  name        = "prometheus-security-group"
  description = "Allow Prometheus traffic"

  ingress {
    description = "prometheus"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
